# HW_Web_11

./: main.py  pyproject.toml
migration/: env.py
migration/versions/: 390161e05f97_init.py  95446bdd33d3_init.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py
src/routes/: todos.py
src/schemas/: todo.py
