[tool.poetry]
name = "hw-web-11"
version = "0.1.0"
description = ""
authors = ["Barskyi <137706923+Barskyi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
uvicorn = "^0.25.0"
pydantic = {extras = ["email"], version = "^2.5.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
